# linkedin_scraper

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE.txt  MANIFEST  MANIFEST.in  README.md  README.rst  TESTING.md  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.claude/: settings.local.json
examples/: cookie_login_example.py  job_details_example.py  job_search_example.py  person_contacts_example.py  person_profile_example.py  recommended_jobs_example.py
linkedin_scraper/: __init__.py  actions.py  callbacks.py  company.py  constants.py  exceptions.py  functions.py  job_search.py  jobs.py  objects.py  people_search.py  person.py  selectors.py  utils.py
linkedin_scraper/core/: __init__.py  auth.py  browser.py  exceptions.py  utils.py
linkedin_scraper/models/: __init__.py  company.py  job.py  person.py  post.py
linkedin_scraper/scrapers/: __init__.py  base.py  company.py  company_posts.py  job.py  job_search.py  person.py
linkedin_user_scraper/: __init__.py  company.py  functions.py  person.py  scraper.py
linkedin_user_scraper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
samples/: company_profile_example.py  create_persistent_session.py  create_session.py  migrate_session.py  scrape_company.py  scrape_company_posts.py  scrape_company_with_post_process.py  scrape_jobs.py  scrape_person.py  scrape_person_contacts.py  scrape_person_persistent.py
test/: __init__.py  scrape_person.py  test_utils.py
tests/: README.md  conftest.py  test_auth.py  test_browser.py  test_company_scraper.py  test_job_scraper.py  test_persistent_browser.py  test_person_scraper.py
